--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,9 @@ html {
 .main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center; 
-    height: 40%;
+    height: 80vh;
 }
 
 .main-text {
@@ -37,7 +38,9 @@ html {
 .footer {
     display: flex;
     align-items: baseline;
-    height: 5%; 
+    height: 20vh; 
+    position: fixed;
+    bottom: 0; 
 }
 .nav-list {
     display: flex;
@@ -53,7 +56,7 @@ html {
     width: 100vw;
     height: 0.2rem; 
     transform: translateY(1.9rem);
-    z-index: 0; 
+    z-index: -1; 
 }
 
 .r {
@@ -65,5 +68,4 @@ html {
     padding-top: 1.3rem;
     border-radius: 2rem;
     margin-bottom: 2.5rem;
-    z-index: 2;
 }
